<resources>
    <string name="app_name">云智水</string>
    <string name="register_name_digits">.0123456789%</string>
    <string name="style_toolbar">切换样式</string>
    <string name="bzssjc">泵站实时监测</string>
    <string name="jc_title">水质监测信息</string>
    <string name="jcdmc">监测点名称:</string>
    <string name="cbzb">超标指标:</string>
    <string name="sypah">上游排水户:</string>
    <string name="syxqx">受影响区域:</string>
    <string name="ckpshxx">查看排水户信息:</string>
    <string name="ckqbjcsj">查看全部监测数据:</string>
    <string name="bzbh">泵站编号</string>
    <string name="bzmc">泵站名称</string>
    <string name="bzyxzt">泵站运行状态</string>
    <string name="ysl">抽升量m²/s</string>
    <string name="yl">雨量mm</string>
    <string name="jclb">监测列表</string>
    <string name="zb">指标:</string>
</resources>
