<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/background_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base70dp">
        <LinearLayout
            android:gravity="center"
            android:background="@drawable/backgroun_bg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bzbh"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_height="match_parent"
            android:background="@drawable/backgroun_bg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
         >
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bzmc"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/backgroun_bg"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/bzbh"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:background="@drawable/backgroun_bg"
                android:weightSum="6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="1#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="2#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="3#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="4#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="5#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:background="@drawable/backgroun_bg"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:text="6#"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
           android:background="@drawable/backgroun_bg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/ysl"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/backgroun_bg"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/yl"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
</LinearLayout>
